--- a/Taller2_VB_2/Taller_02_Lopez_Perrando/Taller_02_Lopez_Perrando/Form1.resx
+++ b/Taller2_VB_2/Taller_02_Lopez_Perrando/Taller_02_Lopez_Perrando/Form1.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="txtIns.Text" xml:space="preserve">
+    <value>Desarrollar una aplicación en VB.Net, modo gráfico, aplicando y practicando los controles básicos de VB. Ademas de investigar sobre las herramientas de depuración en Visual Basic y aplicar los conceptos de depuración a su aplicación en Visual Basic. </value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
